# python-batch-regression

./: README.md  setup.cfg  setup.py
batch_regression/: __init__.py  adf.py  bai_perron.py  chow.py  cubic.py  cusum.py  cusum_squares.py  hurst.py  icss.py  johansen.py  kpss.py  linear.py  multi_linear.py  multilinear.py  nonlinear.py  qlr.py  quadratic.py
